--- a/static/index.html
+++ b/static/index.html
@@ -3,6 +3,10 @@
 <head>
   <meta http-equiv="Content-Security-Policy" content="default-src * atom://*; img-src blob: data: * atom://*; script-src 'self' 'unsafe-eval'; style-src 'self' 'unsafe-inline'; media-src blob: data: mediastream: * atom://*;">
   <script src="index.js"></script>
+  <script src="scripts/lib/p5.js"></script>
+  <script src="scripts/lib/p5.dom.js"></script>
+  <script src="scripts/lib/p5.sound.js"></script>
+  <script src="scripts/src/sketch.js"></script>
 </head>
 <body tabindex="-1">
 </body>
