--- a/static/index.html
+++ b/static/index.html
@@ -1,7 +1,14 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <meta http-equiv="Content-Security-Policy" content="default-src * atom://*; img-src blob: data: * atom://*; script-src 'self' 'unsafe-eval'; style-src 'self' 'unsafe-inline'; media-src blob: data: mediastream: * atom://*;">
+
+  <meta http-equiv="Content-Security-Policy"
+  content="default-src * atom://*;
+    img-src blob: data: * atom://*;
+    worker-src blob: data: * ;
+    script-src 'self' 'unsafe-eval';
+    style-src 'self' 'unsafe-inline';
+    media-src blob: data: mediastream: * atom://*;">
   <script src="index.js"></script>
   <script src="scripts/lib/p5.js"></script>
   <script src="scripts/lib/p5.dom.js"></script>
